--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <div id="scrollbarProgress"></div>
     <div class="wrapper">
         <div class="container">
             <div class="header">
